<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:verticalScrollbarPosition="defaultPosition"
        tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="408dp"
                android:layout_height="655dp"
                android:alpha="0.2"
                android:contentDescription="@string/todo"
                android:src="@drawable/driver"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="#FFEC41"
                android:gravity="center"
                android:text="@string/driver_form"
                android:textAllCaps="false"
                android:textColor="#FF3D00"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.467"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.028" />

        <View
            android:id="@+id/view"
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="#ACA1A1"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="377dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="9dp">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="260dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="220dp">

        </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:text="@string/submit"
                android:textColor="#FF3D00"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#FFEC41"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dbus"
                app:layout_constraintVertical_bias="0.519" />

            <EditText
                android:id="@+id/dbus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#5676"
                android:hint="@string/enter_bus_number"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/demergency" />

            <EditText
                android:id="@+id/demergency"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#5676"
                android:hint="@string/emergency_number"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dlicense" />

            <EditText
                android:id="@+id/dlicense"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="16dp"
                android:background="#5676"
                android:hint="@string/enter_license_number"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daddress" />

            <EditText
                android:id="@+id/daddress"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#5676"
                android:hint="@string/enter_address"
                android:inputType="textLongMessage"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dcontact" />

            <EditText
                android:id="@+id/dcontact"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="16dp"
                android:background="#5676"
                android:hint="@string/enter_contact_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avgdate" />

            <EditText
                android:id="@+id/avgdate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#5676"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/did" />

            <EditText
                android:id="@+id/did"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginLeft="208dp"
                android:layout_marginTop="24dp"
                android:background="#5676"
                android:hint="@string/enter_id"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/emergency_contact_number"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/driving_license_number"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact_number"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/bus_number"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/driver_name"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/driver_id"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</HorizontalScrollView>
